[gd_scene load_steps=21 format=2]

[ext_resource path="res://Instances/Player-VR.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/HUDfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Instances/Flashlight.gd" type="Script" id=5]
[ext_resource path="res://Assets/Weapons/Handgun/HandgunScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Audio/Reload_1.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/Gun_Empty_2.wav" type="AudioStream" id=8]
[ext_resource path="res://other/fire.wav" type="AudioStream" id=9]
[ext_resource path="res://addons/godot-xr-tools/assets/player_body.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_direct.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_turn.tscn" type="PackedScene" id=12]
[ext_resource path="res://Instances/Lamp.tscn" type="PackedScene" id=13]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_physical_jump.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Audio/Player_Damage_1.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Audio/Player_Damage_2.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Audio/Movement_1.wav" type="AudioStream" id=17]
[ext_resource path="res://addons/godot-xr-tools/overrides/ground_physics_settings.gd" type="Script" id=18]

[sub_resource type="Resource" id=1]
script = ExtResource( 18 )
flags = 16
move_drag = 5.0
move_traction = 30.0
stop_on_slope = true
move_max_slope = 45.0
jump_max_slope = 45.0
jump_velocity = 6.0
bounciness = 0.0
bounce_threshold = 1.0

[sub_resource type="OccluderShapePolygon" id=2]
polygon_points = PoolVector2Array( 14.2311, -2.94044, 14.3068, 6.6209, -14.9409, 6.55493, -14.8631, -2.79251 )

[node name="Player" type="Spatial" groups=["Player"]]
script = ExtResource( 1 )

[node name="FPController" parent="." instance=ExtResource( 2 )]
world_scale = 1.8

[node name="ARVRCamera" parent="FPController" index="1"]
far = 1000.0

[node name="VRCommonShaderCache" parent="FPController/ARVRCamera" index="0" instance=ExtResource( 3 )]

[node name="HUD" type="Spatial" parent="FPController/ARVRCamera" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )

[node name="Ammo" type="Label3D" parent="FPController/ARVRCamera/HUD"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, 0 )
pixel_size = 0.001
text = "30"
font = ExtResource( 4 )

[node name="Health" type="Label3D" parent="FPController/ARVRCamera/HUD"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 0 )
pixel_size = 0.001
text = "100"
font = ExtResource( 4 )

[node name="Lamp" parent="FPController/ARVRCamera" index="2" instance=ExtResource( 13 )]

[node name="RemoteTransform" type="RemoteTransform" parent="FPController/LeftHandController" index="0"]
update_scale = false

[node name="MovementDirect" parent="FPController/LeftHandController" index="1" instance=ExtResource( 11 )]
enabled = true
order = 10
max_speed = 5.0
strafe = true

[node name="RemoteTransform" type="RemoteTransform" parent="FPController/RightHandController" index="0"]
update_scale = false

[node name="MovementTurn" parent="FPController/RightHandController" index="1" instance=ExtResource( 12 )]

[node name="PlayerBody" parent="FPController" instance=ExtResource( 10 )]
physics = SubResource( 1 )
collision_layer = 526336

[node name="MovementPhysicalJump" parent="FPController" instance=ExtResource( 14 )]

[node name="PlayerSounds" type="Spatial" parent="FPController"]

[node name="Hurt1" type="AudioStreamPlayer3D" parent="FPController/PlayerSounds"]
stream = ExtResource( 15 )
unit_db = -20.0
unit_size = 10.0
max_db = -4.0

[node name="Hurt2" type="AudioStreamPlayer3D" parent="FPController/PlayerSounds"]
stream = ExtResource( 16 )
unit_db = -20.0
unit_size = 10.0
max_db = -4.0

[node name="FootStep" type="AudioStreamPlayer3D" parent="FPController/PlayerSounds"]
stream = ExtResource( 17 )
unit_db = -20.0
unit_size = 10.0

[node name="Occluders" type="Spatial" parent="FPController"]
visible = false

[node name="Occluder" type="Occluder" parent="FPController/Occluders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14 )
shape = SubResource( 2 )

[node name="Occluder2" type="Occluder" parent="FPController/Occluders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 14 )
shape = SubResource( 2 )

[node name="Occluder3" type="Occluder" parent="FPController/Occluders"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -14.603, 0, 0 )
shape = SubResource( 2 )

[node name="Occluder4" type="Occluder" parent="FPController/Occluders"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 13.758, 0, 0 )
shape = SubResource( 2 )

[node name="Handgun" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )

[node name="ShootLight" type="OmniLight" parent="Handgun"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, -0.012304, 1.4379, -2.33166 )
shadow_enabled = true
omni_range = 10.0

[node name="Flashlight" type="SpotLight" parent="Handgun"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0.00171202, 1.96914, -0.855756 )
spot_range = 30.0
script = ExtResource( 5 )

[node name="Nozzle" type="Position3D" parent="Handgun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.238141, 1.44143, -1.58495 )

[node name="ShootSound" type="AudioStreamPlayer3D" parent="Handgun/Nozzle"]
stream = ExtResource( 9 )
unit_db = -25.0
unit_size = 100.0
max_db = 0.0

[node name="ReloadSound" type="AudioStreamPlayer3D" parent="Handgun/Nozzle"]
stream = ExtResource( 7 )
unit_db = -10.0
unit_size = 5.0
max_db = -3.0

[node name="EmptySound" type="AudioStreamPlayer3D" parent="Handgun/Nozzle"]
stream = ExtResource( 8 )
unit_db = -5.0
unit_size = 5.0

[node name="ShellPosition" type="Position3D" parent="Handgun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.269085, 1.67835, -0.478668 )

[node name="RayCast" type="RayCast" parent="Handgun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.73512, -1.33876 )
cast_to = Vector3( 0, 0, -150 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ShootLightTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShootLightTimer" to="." method="_on_ShootLightTimer_timeout"]

[editable path="FPController"]
